[package]
name = "catalyst-protocol-sdk-rust"
version = "0.1.4"
authors = ["Fran <fran.sl@atlascity.io>", "Catalyst Network <info@catalystnet.org>"]
homepage = "https://atlascity.io"
edition = "2018"
repository = "https://github.com/catalyst-network/protocol-sdk-rust"
description = "Protocol Specification for Catalyst Network"
keywords = ["catalyst", "network", "protocol","protobuf"]
exclude = [".gitignore", "tests/*.rs"]
license = "MIT"

[dependencies]
protobuf = "=2.10.0"